See if img sizes fixes flickering on first load

--- a/components/front/first.module.css
+++ b/components/front/first.module.css
@@ -113,8 +113,6 @@
 
 .dotflower {
 	position: absolute;
-	width: 100px;
-	height: 100px;
 	right: 0;
 	top: 55vh;
 }
